--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/opentelekomcloud-infra/delatore"
 [tool.poetry.dependencies]
 python = "^3.7"
 
-psycopg2-binary
+psycopg2-binary = "^2.8.5"
 alerta = "^7.4.4"
 pyyaml = "^5.3.1"
 ocomone = "^0.4.3"
